# aoc2020

./: .gitignore  .pre-commit-config.yaml  01_1.py  01_2.py  02_1.py  02_2.py  03_1.py  03_2.py  04_1.py  04_2.py  05_1.py  05_2.py  06_1.py  06_2.py  07_1.py  07_2.py  08_1.py  08_2.py  09_1.py  09_2.py  10_1.py  11_1.py  11_2.py  12_1.py  12_2.py  13_1.py  13_2.py  14_1.py  15.py  15_1.py  15_2.py  18_1.ijs  18_1.py  README.md  mypy.ini  pyproject.toml
